# portfolio

./: ._Prezentare_Project_Galileo.pptx  ._Project_GalileoSchema.kicad_sch  ._Project_Galileo_Schema.kicad_pro  ._Project_Galileo_Schema_Fritz.fzz  ._main.m  ._runchanvocoder.m  .gitattributes  .gitignore  1-Proiect_retail sales_tendințe si recomandări strategice.docx  LICENSE  N=18.DSN  N=18_0.DBK  Project_Galileo_Schema_Fritz.fzz  README.md  chanvocoder.m  delta.m  delta_modulation.m  grafic_A_u_Law.m  legeaA.m  pcm.m  r2a.m  uniform_cuantizier.m  waveform_coding.m
College-Projects/Python-Proiect-Licenta-Popescu-Vlad/imcrypt_starter_port/: README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_gui.ps1
College-Projects/Python-Proiect-Licenta-Popescu-Vlad/imcrypt_starter_port/.github/: copilot-instructions.md
College-Projects/Python-Proiect-Licenta-Popescu-Vlad/imcrypt_starter_port/data/: Watch_256_enc.keys.npz  Watch_256_enc_test.keys.npz  (+2 more)
Data-Engineer-Projects/Popescu_Vlad_Gabriel_Veridion_Nr_4_Challenge_Dedup/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.ps1  run_current.ps1
Data-Engineer-Projects/Popescu_Vlad_Gabriel_Veridion_Nr_4_Challenge_Dedup/scripts/: run_dedup.py
Data-Engineer-Projects/Popescu_Vlad_Gabriel_Veridion_Nr_4_Challenge_Dedup/src/: aggregate.py  blocking.py  pipeline.py  similarity.py
Data-Engineer-Projects/Popescu_Vlad_Gabriel_Veridion_Nr_4_Challenge_Dedup/tests/: test.py  test_smoke.py
Data-Engineer-Projects/convert_to_csv_pb_tool/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
Data-Engineer-Projects/convert_to_csv_pb_tool/powerbi_dataset/: README.md  REPORT.txt  dim_boat.csv  dim_division.csv  dim_race.csv  fact_results.csv
Data-Engineer-Projects/convert_to_csv_pb_tool/tests/: test_transform.py
(+622 files in other folders)
