[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veridion-product-dedup"
version = "0.1.0"
description = "Product deduplication with blocking + similarity + clustering (flat src)"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=15.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
