[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "regatta-to-powerbi"
version = "0.1.0"
description = "Convert regatta Excel results into Power BI ready CSVs."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Regatta Analytics" }
]
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "openpyxl>=3.1,<4.0",
    "typer>=0.7,<0.10",
    "rich>=13,<14",
    "click>=8.1,<8.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<8"
]

[project.scripts]
"regatta-to-powerbi" = "regatta_to_powerbi.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
